--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "happy-dom": "^9.20.3",
     "jwt-decode": "^3.1.2",
     "react-router-dom": "^6.11.2",
+    "dotenv": "^16.4.5",
     "vitest": "^1.4.0"
   },
   "devDependencies": {
