--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
       "express": "^4.17.2",
       "graphql": "^16.6.0",
       "jsonwebtoken": "^8.5.1",
+      "dotenv": "^16.4.5",
       "mongoose": "^8.0.0"
     },
     "devDependencies": {
