changed ternary operator in vite config port

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GRAPHQL_SERVER_URL=https://happy-quizmore.onrender.com/graphql
 REACT_APP_GRAPHQL_ENDPOINT=https://happy-quizmore.onrender.com/graphql
 HOME=https://happy-quizmore.onrender.com/
-NODE_ENV=production
+# NODE_ENV=production
 MONGODB_URI=mongodb+srv://djinjones:<s26yLS2kX4DOisg>@djincluster.bmwpe.mongodb.net/?retryWrites=true&w=majority&appName=DjinCluster
