--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "main": "server/server.js",
     "scripts": {
         "start": "node server/server.js",
+        "start-production": "cd client && npm run build && cd .. && node server/server.js",
         "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
-        "build": "cd client && npm run build",
-        "install-build": "cd server && npm install && cd ../client && npm install && cd ../client && npm run build"
+        "build": "cd client && npm run build"
     },
     "keywords": [],
     "author": "",
