changed env variable

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GRAPHQL_SERVER_URL=https://happy-quizmore.onrender.com/graphql
+GRAPHQL_SERVER_URL=https://happy-quizmore.onrender.com
 REACT_APP_GRAPHQL_ENDPOINT=https://happy-quizmore.onrender.com/graphql
 HOME=https://happy-quizmore.onrender.com/
 NODE_ENV=production
